tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_create_through_wrapper_no_directive_leak.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: normalized.as_ref()
---
Created new worktree for feature at [TMPDIR]/test-repo.feature

To enable automatic cd, run: wt configure-shell
