tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_hooks_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mExecuting (post-create):[0m
[40m [0m [1m[34mecho [32m'Installing dependencies...'

Installing dependencies...

🔄 [36mExecuting (post-create):[0m
[40m [0m [1m[34mecho [32m'Building project...'

Building project...

🔄 [36mStarting (background):[0m
[40m [0m [1m[34mecho [32m'Starting dev server on port 3000'

🔄 [36mStarting (background):[0m
[40m [0m [1m[34mecho [32m'Watching for file changes'

✅ [32mCreated new worktree for [1m[32mfeature-hooks[0m at [TMPDIR]/test-repo.feature-hooks[0m
