tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_post_start_command_no_directive_leak.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mRunning post-start:[0m
[40m [0m [1m[34mecho [32m'test command executed'

✅ [32mCreated new worktree for [1m[32mfeature-with-hooks[0m, changed directory to [2m[TMPDIR]/test-repo.feature-with-hooks[0m[0m
